--- a/MainStart/index.html
+++ b/MainStart/index.html
@@ -9,10 +9,13 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- JS -->
+    <script>if (typeof module === 'object') {window.module = module; module = undefined;}
+    </script>
     <script src="../global/js/jquery-latest.min.js"></script>
+    <script>if (window.module) module = window.module;</script>
     <script src="index.js"></script>
 
-    <title>Document</title>
+    <title>DOyouKnowMI Tool - 메인</title>
 </head>
 <body>
     <img class="background-domi" src="./Assets/backbackbackground.png">
