--- a/Project/index.html
+++ b/Project/index.html
@@ -22,6 +22,7 @@
 
     <script src="./js/DB.js"></script>
     <script src="./js/contextMenu.js"></script>
+    <script src="./js/zoom.js"></script>
     <script src="./js/blockSys.js"></script>
 
     <title>Stage 1 프로젝트</title>
@@ -38,7 +39,7 @@
         <section>
             <div class="option-size-main">
                 <div class="option-size-text">화면크기:</div>
-                <input type="number" value="100">%
+                <input id="option-size-value" type="number" value="100">%
             </div>
         </section>
     </header>
