--- a/Project/index.html
+++ b/Project/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./css/background.css">
     <link rel="stylesheet" href="./css/block.css">
     <link rel="stylesheet" href="./css/contextMenu.css">
+    <link rel="stylesheet" href="./css/window.css">
+    <link rel="stylesheet" href="./css/window-alert.css">
 
     <!-- JS -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}
@@ -61,6 +63,15 @@
         <button>추가</button>
         <button>삭제</button>
         <button>위치 복사</button>
+    </div>
+
+    <div class="window-main">
+        <div class="window-head">
+            <div class="window-head-title">Example Title</div>
+            <img class="window-head-close" src="./assets/close.svg">
+        </div>
+
+        <div class="alert-content">어쩔티비 어쩔티비 어쩔티비 어쩔티비 어쩔티비</div>
     </div>
 </body>
 </html>
