--- a/Project/index.html
+++ b/Project/index.html
@@ -25,6 +25,7 @@
 
     <script src="../global/js/electron.js"></script>
     <script src="./js/DB.js"></script>
+    <script src="./js/loadSys.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/contextMenu.js"></script>
     <script src="./js/zoom.js"></script>
