--- a/Project/index.html
+++ b/Project/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/window.css">
     <link rel="stylesheet" href="./css/window-alert.css">
     <link rel="stylesheet" href="./css/window-character.css">
+    <link rel="stylesheet" href="./css/window-welcome.css">
 
     <!-- JS -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}
@@ -31,8 +32,9 @@
     <script src="./js/zoom.js"></script>
     <script src="./js/blockSys.js"></script>
     <script src="./js/window.js"></script>
+    <script src="./js/hotkey.js"></script>
 
-    <title>Stage 1 프로젝트</title>
+    <title>DoYouknowMI Tools - Hello Domi!</title>
 </head>
 
 <body>
